--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,43 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: QQ阅读
+name: qqreads
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/12 * * * *'
+    - cron: '0 0/20 * * *'
   watch:
     types: started
-
+  repository_dispatch:
+    types: qqreads
 jobs:
   build:
+
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        QQREADHEADERVAL: ${{ secrets.QQREADHEADERVAL }}
-        QQREADTIMEHEADERVAL: ${{ secrets.QQREADTIMEHEADERVAL }}
-        QQREADTIMEURLVAL: ${{ secrets.QQREADTIMEURLVAL }}
-        QQREADURLVAL: ${{ secrets.QQREADURLVAL }}
     steps:
       - name: Checkout
-        run: |
-          git clone https://github.com/forMrGao/GaoCorn.git ~/Scripts
-      - name: Use Node.js 12.x
+        uses: actions/checkout@v2
+        with:
+          repository: https://github.com/forMrGao/GaoCorn.git
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
-      - name: npm install
-        if: env.QQREADURLVAL
-        run: |
-          cd ~/Scripts
-          npm install
-      - name: '运行 【QQ】'
-        if: env.QQREADURLVAL
-        run: |
-          cd ~/Scripts
-          node Task/QQread.js
+          node-version: ${{ matrix.node-version }}
+      - name: Cache node_modules
+        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
         env:
-          YOUTH_NOTIFY_CONTROL: ${{ secrets.YOUTH_NOTIFY_CONTROL }}
-          PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-
-    
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
+      - name: npm install
+        run: |
+          npm install
+          npm install got
+          npm install tough-cookie
+      - name: '运行 【QQ阅读】'
+        run: |
+          node qqreads.js
+        
