--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: QQ阅读
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/12 * * * *'
+     - cron: '0 0/20 * * *'
   watch:
     types: started
 
