--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: QQ阅读
+name: 企鹅阅读
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0 0/20 * * *'
+     - cron: '*/30 * * * *'
   watch:
     types: started
 
@@ -32,17 +32,8 @@ jobs:
         run: |
           cd ~/Scripts
           npm install
-      - name: '运行 【QQ】'
+      - name: '运行 【企鹅】'
         if: env.QQREADURLVAL
         run: |
           cd ~/Scripts
-          node Task/QQread.js
-        env:
-          YOUTH_NOTIFY_CONTROL: ${{ secrets.YOUTH_NOTIFY_CONTROL }}
-          PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          node Task/qqread.js
