--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 企鹅阅读
+name: QQ-READ
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 * * * *'
+     - cron: '*/11 1-23 * * *'
   watch:
     types: started
 
@@ -15,25 +15,34 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-        QQREADHEADERVAL: ${{ secrets.QQREADHEADERVAL }}
-        QQREADTIMEHEADERVAL: ${{ secrets.QQREADTIMEHEADERVAL }}
-        QQREADTIMEURLVAL: ${{ secrets.QQREADTIMEURLVAL }}
-        QQREADURLVAL: ${{ secrets.QQREADURLVAL }}
+        QQREAD_BODY: ${{ secrets.QQREAD_BODY }}
+        QQREAD_TIMEURL: ${{ secrets.QQREAD_TIMEURL }}
+        QQREAD_TIMEHD: ${{ secrets.QQREAD_TIMEHD }}
+        
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/forMrGao/GaoCorn.git ~/Scripts
+          git clone https://github.com/ziye12/JavaScript.git ~/JavaScriptTest
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
       - name: npm install
-        if: env.QQREADURLVAL
+        if: env.QQREAD_TIMEHD
         run: |
-          cd ~/Scripts
+          cd ~/JavaScriptTest
           npm install
-      - name: '运行 【企鹅】'
-        if: env.QQREADURLVAL
+      - name: '运行 【企鹅读书】'
+        if: env.QQREAD_TIMEHD
         run: |
-          cd ~/Scripts
-          node Task/qqread.js
+          cd ~/JavaScriptTest
+          node Task/qqreads.js
+        env:
+          
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
